--- a/ts-4.7-beta/package.json
+++ b/ts-4.7-beta/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "ts-4.6",
+  "name": "ts-4.7-beta",
   "version": "1.0.0",
   "main": "./lib/index.js",
   "typings": "./lib/index.d.ts",
@@ -13,6 +13,6 @@
   "license": "MIT",
   "devDependencies": {
     "@microsoft/api-extractor": "7.21.3",
-    "typescript": "4.6.3"
+    "typescript": "4.7.0-beta"
   }
 }
